--- a/TODO
+++ b/TODO
@@ -9,3 +9,6 @@
 - Local Content management with Group
   SELECT * FROM contents WHERE group IN [user.group];
 
+
+QUERY Group USER
+https://console.jumpcloud.com/api/v2/users/5c0176c857423d0c7e330262/memberof
